 - Add new class FunctionSpace
 - Complete redesign of Function class hierarchy, now a single Function class
 - Increased use of shared_ptr in Function, FunctionSpace, etc
 - New interface for boundary conditions, form not necessary
 - Allow simple setting of coefficient functions based on names (not their index)
 - Don't order mesh automatically, meshes must now be ordered explicitly
 - Simpler definition of user-defined functions (constructors not necessary)
 - Make mesh iterators const to allow for const-correct Mesh code
0.8.1 [2008-10-20]
 - Add option to use ML multigrid preconditioner through PETSc
 - Interface change for ODE solvers: uBLASVector --> double*
 - Remove homotopy solver
 - Remove typedef real, now using plain double instead
 - Add various operators -=, += to GenericMatrix
 - Don't use -Werror when compiling SWIG generated code
 - Remove init(n) and init(m, n) from GenericVector/Matrix. Use resize and zero instead
 - Add new function is_combatible() for checking compatibility of boundary conditions
 - Use x as initial guess in Krylov solvers (PETSc, uBLAS, ITL)
 - Add new function errornorm()
 - Add harmonic ALE mesh smoothing
 - Refinements of Graph class
 - Add CholmodCholeskySlover (direct solver for symmetric matrices)
 - Implement application of Dirichlet boundary conditions within assembly loop
 - Improve efficiency of SparsityPattern
 - Allow a variable number of smoothings
 - Add class Table for pretty-printing of tables
 - Add experimental MTL4 linear algebra backend
 - Add OutflowFacet to SpecialFunctions for DG transport problems
 - Remove unmaintained OpenDX file format
 - Fix problem with mesh smoothing near nonconvex corners
 - Simple projection of functions in Python
 - Add file format: XYZ for use with Xd3d
 - Add built-in meshes: UnitCircle, Box, Rectangle, UnitSphere
0.8.0 [2008-06-23]
 - Fix input of matrix data from XML
 - Add function normalize()
 - Integration with VMTK for reading DOLFIN XML meshes produced by VMTK